--- a/domed.service
+++ b/domed.service
@@ -4,6 +4,7 @@ After=syslog.target
 
 [Service]
 Type=simple
+Restart=on-failure
 ExecStart=/usr/bin/env python3 -u /usr/bin/domed
 StandardOutput=syslog
 StandardError=syslog
