--- a/domed.service
+++ b/domed.service
@@ -8,6 +8,8 @@ After=network-online.target
 Restart=on-failure
 Type=simple
 ExecStart=/usr/bin/env python3 -u /usr/bin/domed
+ExecStartPost=/usr/bin/env python3 -u /usr/bin/obslog info raind Started by systemd
+ExecStopPost=/usr/bin/env python3 -u /usr/bin/obslog info raind Stopped by systemd
 StandardOutput=syslog
 StandardError=syslog
 
