--- a/domed.service
+++ b/domed.service
@@ -7,7 +7,7 @@ After=network-online.target
 [Service]
 Restart=on-failure
 Type=simple
-ExecStart=/usr/bin/env python3 -u /usr/bin/domed
+ExecStart=/usr/bin/env python3 -u /usr/bin/domed onemetre
 ExecStartPost=/usr/bin/env python3 -u /usr/bin/obslog info domed Started by systemd
 ExecStopPost=/usr/bin/env python3 -u /usr/bin/obslog info domed Stopped by systemd
 StandardOutput=syslog
