Add support for the RASA in the 18 foot dome.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ script:
  # Set the spec Revision field to <latest in repo> + 1
  - deploy/repository/set-spec-release.sh onemetre-dome-server.spec
  - deploy/repository/set-spec-release.sh onemetre-dome-client.spec
+ - deploy/repository/set-spec-release.sh rasa-dome-server.spec
  - deploy/repository/set-spec-release.sh python34-warwick-w1m-dome.spec
  # Compile rpm packages by running `make` in a centos7 container
  - docker run --rm=true -e "USERID=${UID}" -v `pwd`:/src:rw centos:centos7 /bin/sh -c "cd src && deploy/make-on-centos7.sh"
